fix text wrap bug in search module

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -2592,7 +2592,7 @@ body {
   &__type {
     position: relative;
     padding: 9px;
-    padding-right: 20px;
+    padding-right: 25px;
     display: flex;
     font-size: 14px;
     &:after {
@@ -2616,10 +2616,12 @@ body {
     }
     &-text {
       text-align: center;
+      -webkit-box-flex: 1;
       flex-grow: 1;
-      vertical-align: middle;
-      display: inline-block;
-      padding-left: 5px;
+      padding: 0 5px;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
   }
   &__price {
